--- a/doc/Experiments_02122019.ipynb
+++ b/doc/Experiments_02122019.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Estimating the Borrelia burgdoeferi strain diversity in North-American tick samples\n",
+    "# Estimating the Borrelia burgdorferi strain diversity in North-American tick samples\n",
     "## Cedric Chauve, December 16, 2019\n",
     "\n",
     "In this notebook, I describe a novel method to estimate the diversity of a bacterial pathogen, namely *Borrelia burgdorferi*, from high-throughput sequencing data collected from 24 North-American tick samples. The goal is twofold -- introduce a novel method and illustrate it on real data -- with the aim to both improve the method and design a realstic simulation pipeline allowing to estimate its accuracy."
