--- a/doc/Experiments_02122019.ipynb
+++ b/doc/Experiments_02122019.ipynb
@@ -144,7 +144,7 @@
     "\n",
     "For each sample, we considered the reads a single-end reads, i.e. we did not use the pairing information. We mapped the sample reads onto the 927 sequences defined as above (one for each known ST) using bowtie with the following command:\n",
     "\n",
-    "<center>bowtie2 -f -a --local --very-sensitive</center>\n",
+    "bowtie2 -f -a --local --very-sensitive\n",
     "\n",
     "Then for each read, we conserved a single mapping considered as the best mapping. For a given read, we expect it will align well within the same locus of many flanked STs. So we kept as best mapping the one with the maximum number of matched bases withiin the allele (i.e. not including the flanking regions). For reads overlapping both the allele and a flanking region (prefix or suffix), we kept the mapping only if at least 38bp (i.e. half of the read) mapped within the allele. Last, for each kept mapped read, we translated the mapping into a mapping onto the MSA for this allele, excluding mapping that would define an insertion (i.e. extend the length of the MSA). This results in a subset of reads, each associated to a specific locus of the MLST scheme, and for this locus, to a set of positions (columns) of the MSA with a nucleotide value per position (A,C,G,T or X if the best mapping indicates a deletion in the read).\n",
     "\n",
