--- a/doc/Experiments_02122019.ipynb
+++ b/doc/Experiments_02122019.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Estimating the Borrelia burgdorferi strain diversity in North-American tick samples\n",
-    "## Cedric Chauve, December 16, 2019\n",
+    "## Cedric Chauve, December 20, 2019\n",
     "\n",
     "In this notebook, I describe a novel method to estimate the diversity of a bacterial pathogen, namely *Borrelia burgdorferi*, from high-throughput sequencing data collected from 24 North-American tick samples. The goal is twofold -- introduce a novel method and illustrate it on real data -- with the aim to both improve the method and design a realstic simulation pipeline allowing to estimate its accuracy."
    ]
@@ -259,17 +259,12 @@
     "The average (resp. maximum) deviation for a solution is the sum (resp. maximum) of $DEV(j)$ over all variable positions $j$ divided by $N$ the number of variable positions, and is denoted by $DEV\\_AVG$ (resp. $DEV\\_MAX$).\n",
     "\n",
     "##### Phasing ratio\n",
-    "Last, we consider all mapped reads. Each such read maps over a set of at least one variable position, and we consider only reads mapping over at least two variable positions. Such a read is said to be *phased* if there exists at least one inferred ST for which the content at these positions is the content observed in the read. The *phasing ratio* is the ratio of the number of non-phased reads over the number reads mapping over several variable positions. We denote it by $UNPHASED$.\n",
+    "Last, we consider all mapped reads. Each such read maps over a set of at least one variable position, and we consider only reads mapping over at least two variable positions. Such a read is said to be *phased* if there exists at least one inferred ST for which the content at these positions is the content observed in the read. The *phasing ratio* is the ratio of the number of non-phased reads over the number reads mapping over several variable positions. We denote it by $UPR=UNPHASED\\_READS\\_RATIO$. Note that this approach does not use the reads pairong information but it is easy to incorporate (experiments with this extension are running).\n",
     "\n",
     "##### Objective function\n",
-    "It aims to minimize $$NSU+DEV\\_AVG+DEV\\_MAX+UNPHASED$$\n",
+    "It aims to minimize $$NSU+DEV\\_AVG+DEV\\_MAX+UPR$$\n",
     "\n",
-    "We solve it using an ILP implemented in CPLEX where we fix the parameter $K$ (it is the only parameter).\n",
-    "\n",
-    "##### Comments\n",
-    "We incorporate the phasing through the term $PHASED\\_RATIO$, but would-it also make sense to incorporate a term penalizing inferred STs that are not covered by phased reads?\n",
-    "\n",
-    "It is easy to compute, for each inferred ST, the closest other inferred ST in terms of Hamming distance. If we assume some within-host evolution, could-we incorporate this quantity in the objective function? If yes should it be limited to a within-host evolution model (one source ST and all the other ones derive from it) ? Or should we consider several possible sources and how to decide of this number ?"
+    "We solve it using an ILP implemented in CPLEX where we fix the parameter $K$ (it is the only parameter)."
    ]
   },
   {
@@ -489,21 +484,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Comments.\n",
+    "## Comments.\n",
     "\n",
-    "We can see the expected problem of refining the result by adding low abundance STs. This is where penalizing STs that are ot supported by phased reads could become interesting. We can also observe the phenomenon of some kind of recombination between strains of a solution with $k$ STs to obtain the solution with $k+1$ STs. This is mitigated by the used of the term $UNPHASED$ in the objective function but still occurs when low abundance STs are added.\n",
+    "#### Low abundance STs.\n",
+    "We can see the expected problem of refining the result by adding low abundance STs. So far the terms $NSU$ and $UPR$ do not counterbalance the advantage of optimizing the deviation terms by adding low abundance STs. It would be interesting to evaluate, through well controlled simulation, the impact of this phenomenon.\n",
     "\n",
-    "Could it happen that we can improve this aspect if several samples are considered at once. This would force to join the variable posiions of both samples and actually some positions that are invariant in both could become variable. This would increase the size of the ILP and might lead to scalability issue. "
+    "#### Using phaing to define STs.\n",
+    "So far we consider the phasing only in terms of reads: we want a solution that is in agreement with as many reads as possible. But conversely, especially if we expect a decent coverage, we should expect that the defined STs agree with the reads, i.e. that positions that are close-by are supported by reads. More precisely, a position in an ST is said to be phased if there exists a read that overlaps this positipon and agree with the ST sequence. One can then define a ratio of the number of phased positions over the number of positions (K x number of variable positions) and incorporate this in the objective function. However this is somewhat unsatisfying because a same read can \"support\" several STs. So this might make this objective term take over the deviation terms. Ideally we would like to assign reads to STs, but this is not do-able due to the large number of reads in the high-coverage data sets: it would generate too many decision variables (already the current ILP requires several Gb of memory).\n",
+    "\n",
+    "#### Possible STs.\n",
+    "Currently, all possible combinations of alleles are allowed as possible STs. It would be interesting to use a preprocessing step, using likely a de Bruijn graph, to define a limited set of possible STs (paths in the graph) and enforcing that the inferred STs are among these ones. This turns the problem into a pure LP. But in our MLST context where the 8 loci are independant, there will be a combinatorial explosion of the number of decision variables as it will be the cartesian product of the possible alleles at all loci. But more generally it might be interesting to see the information we can extract from a preliminary assembly of the reads to limit the search space of the (I)LP.\n",
+    "\n",
+    "#### Simulations.\n",
+    "The *Borrelia* dataset we have are very different from the datasets obtained by picking STs at random. The number of variable positions is much smaller, which make it amenable to exact optimization. A first set of simulations would be to take the current datasets we have, define STs diversity+sequencing instances that agree with these datasets, together with a controlled level of noise both in the allelic frequency matrix and in the phasing by sequencing reads, and see if we can recover the good solution. It is quite limited (as we simulate within the model we wsolve) but likely needed to validate our approach as a proof of concept.\n",
+    "\n",
+    "#### Heuristics.\n",
+    "The problem we aim to solve is quite limited in size (number of variable positions) but the objective function is multi-terms, so it is not immediately clear how it could be attacked using a heuristic, especially as it depends crucially of the abundance assigned to the STs. One could ask if\n",
+    "- it is doable to assign abundances optimally given the STs,\n",
+    "- it is doable to define STs optimally given abundances,\n",
+    "- is-it doable to assign reads optimally given STs.\n",
+    "If that was the case then maybe some kind of smiulated annealing or MCMC exploration could prove to be useful.\n",
+    "\n",
+    "General heuristics that might be worth looking at, kernel search: http://cors.sites.olt.ubc.ca/files/2012/11/Abstract-Speranza.pdf\n",
+    "\n",
+    "Otherwise, we did not explore the LP relaxation approach followed by rounding, but I am not a specialist of this approach. And while I see that we can relac=x the 0/1 cosntraint on assigning nucleotides to the STs, it is not clear how that would work out for the phasing part of the ILP as it is defined in terms of these 0/1 variables."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
