--- a/doc/Experiments_02122019.ipynb
+++ b/doc/Experiments_02122019.ipynb
@@ -232,7 +232,7 @@
     "clpA_590\tA:0 C:0 G:0 T:76 X:0   \n",
     "\n",
     "\n",
-    "I think there is a lot of room for improvement here, for example using a colored de Bruijn graph to identify. The work presented by Pierre Peterlongo at SeqBIM could be helpful."
+    "I think there is a lot of room for improvement here, for example using a colored de Bruijn graph to identify. The work presented by Kevin Da Silva at SeqBIM could be helpful."
    ]
   },
   {
